# readwise-mcp

./: README.md  pyproject.toml
src/readwise_mcp/: __init__.py  cli.py  models.py  server.py
